# 3560.03-group1-project

./: .gitignore  3560.03-group1-project.csproj  3560.03-group1-project.sln  Program.cs  sqlite.db
admin-keeper-app/: .env  Cargo.toml
admin-keeper-app/migrations/2025-11-18-062736-0000_create_users/: down.sql  up.sql
admin-keeper-app/migrations/2025-11-18-062739-0000_create_players/: down.sql
admin-keeper-app/migrations/2025-11-18-062742-0000_create_teams/: down.sql  up.sql
admin-keeper-app/migrations/2025-11-18-062749-0000_create_stat_kinds/: up.sql
admin-keeper-app/migrations/2025-11-18-062752-0000_create_stat_instances/: up.sql
admin-keeper-app/migrations/2025-11-18-063257-0000_create_team_memberships/: down.sql  up.sql
admin-keeper-app/src/: app.rs  lib.rs  main.rs
admin-keeper-app/src/models/: game.rs  junction_table.rs  mod.rs  player.rs  sport.rs  stat.rs  team.rs  user.rs
admin-keeper-app/src/pages/: admin.rs  keeper.rs  login.rs  mod.rs
database-seeder/: .env  Cargo.toml  sqlite.db  stats_gen-linux
database-seeder/migrations/2025-11-18-062729-0000_create_sports/: down.sql  up.sql
database-seeder/migrations/2025-11-18-062736-0000_create_users/: up.sql
database-seeder/migrations/2025-11-18-062739-0000_create_players/: up.sql
database-seeder/migrations/2025-11-18-062742-0000_create_teams/: up.sql
database-seeder/migrations/2025-11-18-062749-0000_create_stat_kinds/: down.sql  up.sql
database-seeder/migrations/2025-11-18-062752-0000_create_stat_instances/: down.sql  up.sql
database-seeder/src/: main.rs  schema.rs
src/: Game.cs  (+8 more)
(+30 files in other folders)
