[package]
name = "admin-keeper-app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
async-std = {version = "1.13.2", features= ["attributes"]}
diesel = {version="2.3.3", features = ["sqlite"]}
sha2 = "0.10.9"
jiff = "0.2.16"
pollster = "0.4.0"
rand = "0.9.2"
strsim = "0.11.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
