[package]
name = "stats_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = { version = "1.13.2", features = ["attributes"] }
diesel = {version="2.3.3", features = ["sqlite"]}
egui-async = "0.2.3"
hex-literal = "1.1.0"
jiff = "0.2.16"
pollster = "0.4.0"
rand = "0.9.2"
remove = "0.1.3"
sha2 = "0.10.9"
